--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,7 @@ h1.big {
 
 @media (max-width: 500px) {
     h1.big {
-        font-size: 3rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -908,30 +908,46 @@ table tbody tr:hover td {
     max-width: 100vw;
 }
 
-.sticky-navbar {
+.project {
+    scrollbar-color: black var(--dark-background-dark-1);
+}
+
+.project::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+.project::-webkit-scrollbar-thumb {
+    background-color: black;
+}
+
+.project::-webkit-scrollbar-track {
+    background-color: var(--dark-background-dark-1);
+}
+
+.navbar {
     width: 95vw;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    position: sticky;
-    top: 0;
+    /*position: sticky;*/
+    /*top: 0;*/
     z-index: 2;
     overflow: auto;
     flex-wrap: nowrap;
     white-space: nowrap;
 }
 
-.sticky-navbar::-webkit-scrollbar {
+.navbar::-webkit-scrollbar {
     display: none;
 }
 
 .project-nav-link {
     border-radius: 30px;
     padding: 10px;
-    background-color: var(--dark-background-dark-1);
+    background-color: var(--dark-background);
     color: var(--light-font-color);
     cursor: pointer;
     border: 2px solid transparent;
-    transition: border-color ease 0.2s;
+    transition: background-color ease 0.25s;
     flex-wrap: nowrap;
     user-select: none;
     margin: 5px 10px;
@@ -939,24 +955,11 @@ table tbody tr:hover td {
     font-weight: 600;
     height: 100%;
     position: relative;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
 
-.project-nav-link::before {
-    position: absolute;
-    bottom: -17px;
-    content: '';
-    height: 3px;
-    width: 10px;
-    background-color: transparent;
-    border-radius: 2px;
-    transition: background-color ease 0.2s, bottom ease 0.2s;
-}
-
-.project-nav-link.current-project::before,
-.project-nav-link:hover::before {
-    background-color: var(--dark-background-light-2);
-    bottom: -10px;
+.project-nav-link.current-project,
+.project-nav-link:hover {
+    background-color: var(--dark-background-dark-1);
 }
 
 .project {
@@ -1073,10 +1076,6 @@ table tbody tr:hover td {
     .project .project-content {
         max-width: 100%;
     }
-}
-
-.project-content h1 {
-    word-break: break-all;
 }
 
 .mjxgui-demo-button {
