--- a/styles.css
+++ b/styles.css
@@ -843,10 +843,10 @@ table tbody tr:hover td {
 }
 
 #work-timeline-container {
-    background-color: black;
+    background-color: var(--dark-background-dark-1);
     border-top-left-radius: 22px;
     border-bottom-left-radius: 22px;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 15px black;
     color: var(--light-font-color);
 }
 
@@ -855,7 +855,7 @@ table tbody tr:hover td {
 }
 
 #work-timeline-container .last-timeline-item::after {
-    background-color: black;
+    background-color: var(--dark-background-dark-1);
 }
 
 #work-timeline-container .timeline-category {
@@ -915,19 +915,23 @@ table tbody tr:hover td {
     max-width: 100vw;
 }
 
-.project {
+.project,
+.project-story-card {
     scrollbar-color: black var(--dark-background-dark-1);
 }
 
-.project::-webkit-scrollbar {
+.project::-webkit-scrollbar,
+.project-story-card::-webkit-scrollbar {
     width: 0.5em;
 }
 
-.project::-webkit-scrollbar-thumb {
+.project::-webkit-scrollbar-thumb,
+.project-story-card::-webkit-scrollbar-thumb {
     background-color: black;
 }
 
-.project::-webkit-scrollbar-track {
+.project::-webkit-scrollbar-track,
+.project-story-card::-webkit-scrollbar-track {
     background-color: var(--dark-background-dark-1);
 }
 
@@ -1038,21 +1042,47 @@ table tbody tr:hover td {
     cursor: pointer;
 }
 
+.project-story-card-container {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    backdrop-filter: blur(5px);
+    z-index: 3;
+}
+
 .project-story-card {
     position: fixed;
-    width: 80vw;
-    max-width: 800px;
-    height: 80vh;
+    width: 90vw;
+    max-width: 1100px;
+    height: 90vh;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--dark-background-light-1);
+    background-color: var(--dark-background-dark-1);
     color: var(--light-font-color);
     z-index: 3;
     border-radius: 10px;
     overflow-y: auto;
     padding: 30px 60px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+.project-story-card h1 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+@media (max-width: 600px) {
+    .project-story-card {
+        padding: 30px;
+        height: 95vh;
+    }
+
+    .project-story-card h1 {
+        font-size: 1.9rem;
+    }
 }
 
 .story-card-close-button .icon-tabler-x {
