--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ a {
 }
 
 a.a {
-    border-bottom: 1px dotted var(--primary);
+    border-bottom: 2px dotted var(--primary);
 }
 
 .icon-tabler {
@@ -382,6 +382,12 @@ h1.big {
     font-size: 3rem;
 }
 
+@media (max-width: 900px) {
+    h1.big {
+        font-size: 2.5rem;
+    }
+}
+
 @media (max-width: 500px) {
     h1.big {
         font-size: 1.8rem;
@@ -560,66 +566,6 @@ table tbody tr:hover td {
     opacity: 0;
 }
 
-.footer-bar {
-    position: sticky;
-    bottom: 0;
-    padding: 15px 100px;
-    width: 100%;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 1;
-}
-
-@media (max-width: 700px) {
-    .footer-bar {
-        padding: 15px 50px;
-    }
-}
-@media (max-width: 500px) {
-    .footer-bar {
-        padding: 15px 15px;
-    }
-    .footer-bar span {
-        display: none;
-    }
-}
-
-.logo {
-    cursor: pointer;
-    user-select: none;
-    font-size: 1.1rem;
-    background-color: transparent;
-    transition: background-color ease 0.25s;
-    padding: 7px;
-    border-radius: 6px;
-    outline: none;
-    border-color: transparent;
-    font-family: var(--default-font);
-    stroke: rgb(60, 60, 60);
-}
-
-.logo:hover, .logo:active, .logo:focus {
-    background-color: var(--background-dark-1);
-}
-
-.logo:hover svg, .logo:active svg, .logo:focus svg {
-    stroke: black;
-}
-
-.footer-bar .logo {
-    z-index: 2;
-}
-
-.header-bar {
-    position: absolute;
-    top: 0;
-    padding: 25px 100px;
-    width: 100%;
-}
-
-.header-bar a {
-    z-index: 2;
-}
 
 .tippy-box[data-theme~='orange-gradient'] {
     background: rgb(243, 137, 4);
@@ -654,61 +600,6 @@ table tbody tr:hover td {
 }
 
 
-/*
-    about styles
-*/
-
-.about {
-    margin-top: 50px;
-    background-color: var(--dark-background);
-    position: relative;
-}
-
-#matter-anim-1 {
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    position: absolute;
-}
-
-#bg-placeholder {
-    position: absolute;
-    top: 0;
-    bottom: 80%;
-    left: 0;
-    right: 0;
-    background-color: var(--background-color);
-    z-index: 0;
-}
-
-.about #bio {
-    border-top-left-radius: 22px;
-    z-index: 1;
-    box-shadow: -5px -5px 10px rgba(0,0,0,0.3);
-}
-
-@media (max-width: 600px) {
-    .about #bio {
-        box-shadow: none;
-    }
-}
-
-.about .me {
-    background-color: var(--background-color);
-    border-bottom-right-radius: 22px;
-    z-index: 1;
-}
-
-.bio-text {
-    font-size: 1.1rem;
-    z-index: 1;
-}
-
-@media (max-width: 600px) {
-    .bio-text {
-        font-size: 1rem;
-    }
-}
 
 #my-photo-mobile, #my-photo-large-screen {
     background: grey;
@@ -722,6 +613,10 @@ table tbody tr:hover td {
     #my-photo-mobile {
         display: block;
     }
+
+    #my-photo-large-screen {
+        display: none;
+    }
 }
 
 #name-card {
@@ -734,7 +629,7 @@ table tbody tr:hover td {
     }
 }
 
-@media(max-width: 500px) {
+@media(max-width: 700px) {
     #name-card > div {
         align-items: center;
     }
@@ -747,12 +642,12 @@ table tbody tr:hover td {
     font-family: var(--decorative-font);
     text-transform: lowercase;
     font-weight: 600;
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 @media (max-width: 1150px) {
     .nametag {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 }
 
@@ -830,315 +725,6 @@ table tbody tr:hover td {
 
 .timeline-item:hover .timeline-category, .timeline-item:hover .timeline-comment {
     color: var(--font-color);
-}
-
-
-/*
-    experience styles
-*/
-.page-experience {
-    background-color: var(--dark-background);
-    color: var(--light-font-color);
-    padding-top: 100px;
-}
-
-#work-timeline-container {
-    background-color: var(--dark-background-dark-1);
-    border-top-left-radius: 22px;
-    border-bottom-left-radius: 22px;
-    box-shadow: 0 0 15px black;
-    color: var(--light-font-color);
-}
-
-#work-timeline-container .timeline-item:hover .timeline-category, #work-timeline-container .timeline-item:hover .timeline-comment {
-    color: var(--light-font-color);
-}
-
-#work-timeline-container .last-timeline-item::after {
-    background-color: var(--dark-background-dark-1);
-}
-
-#work-timeline-container .timeline-category {
-    font-family: var(--decorative-font);
-    text-transform: lowercase;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-@media (max-width: 1150px) {
-    #work-timeline-container h1.big {
-        font-size: 3rem;
-    }
-}
-
-@media (max-width: 500px) {
-    #work-timeline-container {
-        box-shadow: none;
-    }
-
-    #work-timeline-container h1.big {
-        font-size: 2rem;
-    }
-}
-
-
-
-
-
-/*
-    projects styles
-*/
-.page-projects, #bio {
-    background-color: var(--dark-background);
-    color: var(--light-font-color);
-}
-
-@media (max-width: 650px) {
-    .page-projects {
-        padding: 0;
-    }
-    .page-projects #projects {
-        font-size: 3rem;
-    }
-    .page-projects .project h2.big {
-        font-size: 2rem;
-    }
-    .page-projects .project .project-content {
-        margin-left: 0;
-    }
-}
-
-.project-container {
-    justify-content: center;
-    position: relative;
-    overflow-x: hidden;
-    max-width: 100vw;
-}
-
-.project,
-.project-story-card {
-    scrollbar-color: black var(--dark-background-dark-1);
-}
-
-.project::-webkit-scrollbar,
-.project-story-card::-webkit-scrollbar {
-    width: 0.5em;
-}
-
-.project::-webkit-scrollbar-thumb,
-.project-story-card::-webkit-scrollbar-thumb {
-    background-color: black;
-}
-
-.project::-webkit-scrollbar-track,
-.project-story-card::-webkit-scrollbar-track {
-    background-color: var(--dark-background-dark-1);
-}
-
-.navbar {
-    width: 95vw;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    /*position: sticky;*/
-    /*top: 0;*/
-    z-index: 2;
-    overflow: auto;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-}
-
-.navbar::-webkit-scrollbar {
-    display: none;
-}
-
-.project-nav-link {
-    border-radius: 30px;
-    padding: 10px;
-    background-color: var(--dark-background);
-    color: var(--light-font-color);
-    cursor: pointer;
-    border: 2px solid transparent;
-    transition: background-color ease 0.25s;
-    flex-wrap: nowrap;
-    user-select: none;
-    margin: 5px 10px;
-    font-size: 1rem;
-    font-weight: 600;
-    height: 100%;
-    position: relative;
-}
-
-.project-nav-link.current-project,
-.project-nav-link:hover {
-    background-color: var(--dark-background-dark-1);
-}
-
-.project {
-    width: 80%;
-    height: 450px;
-    background-color: var(--dark-background-dark-1);
-    color: var(--light-font-color);
-    /*font-family: var(--decorative-mono);*/
-    font-weight: 500;
-    transition: left ease 0.25s;
-    border-radius: 20px;
-    overflow-y: auto;
-    position: relative;
-    left: 100%;
-    display: none;
-}
-
-@media(max-width: 600px) {
-    .project {
-        height: 600px;
-    }
-}
-
-.project.active-project {
-    display: flex;
-    left: 0;
-}
-
-@media (max-width: 400px) {
-    .project {
-        margin: 10px;
-        max-width: 320px;
-        min-width: 320px;
-    }
-}
-
-.project .project-desc {
-    margin: 10px 0;
-}
-
-.project .project-desc-column {
-    border-right: 1px solid var(--background-dark-2);
-    padding-right: 20px;
-}
-
-.project .project-story-column {
-    padding-left: 30px;
-}
-
-@media (max-width: 900px) {
-    .project .project-desc-column {
-        border-right: none;
-        padding-right: 0;
-    }
-
-    .project .project-story-column {
-        padding-left: 0;
-    }
-}
-
-.project-story-button {
-    background-color: var(--dark-background-dark-1);
-    color: var(--light-font-color);
-    border: none;
-    border-bottom: 2px dashed var(--light-font-color);
-    padding: 3px;
-    font-size: 0.8rem;
-    font-weight: bolder;
-    cursor: pointer;
-}
-
-.project-story-card-container {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    backdrop-filter: blur(5px);
-    z-index: 3;
-}
-
-.project-story-card {
-    position: fixed;
-    width: 90vw;
-    max-width: 1100px;
-    height: 90vh;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--dark-background-dark-1);
-    color: var(--light-font-color);
-    z-index: 3;
-    border-radius: 10px;
-    overflow-y: auto;
-    padding: 30px 60px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-.project-story-card h1 {
-    text-align: center;
-    margin-top: 20px;
-}
-
-@media (max-width: 600px) {
-    .project-story-card {
-        padding: 30px;
-        height: 95vh;
-    }
-
-    .project-story-card h1 {
-        font-size: 1.9rem;
-    }
-}
-
-.story-card-close-button .icon-tabler-x {
-    stroke: var(--light-font-color);
-}
-
-.project-links .link {
-    border-radius: 15px;
-    background-color: var(--dark-background-dark-2);
-    color: var(--light-font-color);
-    padding: 5px 10px;
-    margin: 5px;
-    font-family: var(--decorative-mono);
-    font-weight: 500;
-}
-
-.project .flair svg {
-    margin: 0 8px;
-}
-
-.project-links .link svg {
-    stroke: var(--muted-font);
-}
-
-.project .project-content {
-    margin-left: 30px;
-    max-width: 80%;
-}
-
-@media (max-width: 600px) {
-    .project .project-content {
-        max-width: 100%;
-    }
-}
-
-.mjxgui-demo-button {
-    cursor: pointer;
-    user-select: none;
-}
-
-.mini-project {
-    border: 2px solid var(--dark-background-light-1);
-    border-radius: 30px;
-    background-color: var(--dark-background-light-1);
-    color: var(--light-font-color);
-    max-width: 40%;
-}
-
-@media (max-width: 900px) {
-    .mini-project {
-        max-width: 90%;
-    }
-}
-
-.mini-project .link svg {
-    stroke: rgb(122, 122, 122);
 }
 
 /*
@@ -1302,7 +888,7 @@ small.helper-button {
 nav#quick-nav {
     color: var(--font-color);
     font-size: 1rem;
-    font-family: var(--monospace-font);
+    font-family: var(--decorative-mono);
     z-index: 3;
     padding-top: 20px;
     padding-bottom: 15px;
