Showed 3 projects on homepage

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,10 @@ a.a {
     border-bottom: 2px dotted var(--primary);
 }
 
+a.a:hover {
+    border-bottom-style: solid;
+}
+
 .icon-tabler {
     stroke: rgb(134, 134, 134);
 }
@@ -373,29 +377,20 @@ a.button-link:active {
 
 h1 {
     font-family: var(--decorative-font);
-    font-size: 2.4rem;
+    font-size: 2rem;
     text-transform: lowercase;
     margin: 20px 0;
 }
 
-h1.big {
-    font-size: 3rem;
-}
-
-@media (max-width: 900px) {
-    h1.big {
-        font-size: 2.5rem;
-    }
+h2 {
+    font-family: var(--decorative-font);
+    text-transform: lowercase;
 }
 
 @media (max-width: 500px) {
-    h1.big {
-        font-size: 1.8rem;
+    h1 {
+        font-size: 1.6rem;
     }
-}
-
-h2.big {
-    font-size: 3rem;
 }
 
 .decorative-heading {
@@ -412,8 +407,8 @@ h2.big {
 table {
     width: 100%;
     border-collapse: collapse;
-    border: 2px solid var(--light-font-color);
-    color: var(--light-font-color);
+    border: 2px solid var(--font-color);
+    color: var(--font-color);
 }
 
 table td, table th {
@@ -424,31 +419,16 @@ table thead {
     font-family: var(--decorative-font);
     text-transform: lowercase;
     font-size: 1.2rem;
+    font-weight: bolder;
 }
 
 table thead tr {
-    border-bottom: 2px solid var(--light-font-color);
-}
-
-table td:nth-child(2n-1) {
-    background-color: var(--dark-background-dark-1);
-}
-
-table td:nth-child(2n) {
-    background-color: var(--dark-background);
+    border-bottom: 2px solid var(--font-color);
 }
 
 tbody {
     font-family: var(--monospace-font);
     font-size: 1.2rem;
-}
-
-table tbody tr td {
-    transition: background-color ease 0.25s;
-}
-
-table tbody tr:hover td {
-    background-color: var(--dark-background-light-1);
 }
 
 #mjxgui_editor_window {
@@ -930,10 +910,33 @@ nav#quick-nav .section-link {
 
 #quick-nav .section-link:hover::before {
     bottom: -7px;
-    background-color: var(--dark-background);
+    background-color: var(--primary);
 }
 
 #quick-nav .section-link svg {
     top: 5px;
     stroke: rgb(70, 70, 70);
+}
+
+
+/*
+    Card styles
+*/
+
+.card-content {
+    max-width: 80%;
+    margin-left: 20px;
+}
+
+.link {
+    margin-top: 10px;
+    user-select: none;
+}
+
+.link svg {
+    stroke: var(--muted-font);
+}
+
+.mjxgui-demo-button {
+    cursor: pointer;
 }
