--- a/styles.css
+++ b/styles.css
@@ -887,7 +887,7 @@ nav#quick-nav {
     color: var(--font-color);
     font-size: 1rem;
     font-weight: 500;
-    font-family: var(--decorative-mono);
+    font-family: var(--monospace-font);
     z-index: 3;
     padding-top: 20px;
     padding-bottom: 15px;
