--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,11 @@ html, body {
     scroll-behavior: smooth;
 }
 
+::selection {
+    background-color: var(--primary);
+    color: black;
+}
+
 a {
     color: inherit;
     text-decoration: none;
