--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,11 @@ tbody {
     display: none;
 }
 
+.material-symbols-outlined {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .message-warning {
     background-color: var(--warning-light-3);
     color: var(--warning-dark-3);
@@ -720,11 +725,6 @@ html.dark-theme #profile-photo {
     margin-right: 23px;
 }
 
-/*.card h1, .card h2 {*/
-/*    font-family: var(--default-font);*/
-/*    text-transform: none;*/
-/*}*/
-
 #education-container p {
     margin-top: 0;
     font-weight: bolder;
@@ -745,18 +745,22 @@ section {
     margin-right: 6px;
 }
 
-/*.section-link {*/
-/*    margin-left: 20px;*/
-/*    display: flex;*/
-/*}*/
+#about-container, #about-stats {
+    max-width: 800px;
+}
 
-/*.section-link::before {*/
-/*    content: '';*/
-/*    width: 4px;*/
-/*    height: 4px;*/
-/*    border-radius: 4px;*/
-/*    background-color: var(--primary-dark-1);*/
-/*    position: relative;*/
-/*    left: -10px;*/
-/*    top: 10px;*/
-/*}*/
+#about-container {
+    font-size: 1.2rem;
+    margin-left: 30px;
+}
+
+#about-stats {
+    font-family: var(--monospace-font);
+}
+
+@media (max-width: 900px) {
+    #about-container {
+        font-size: 1rem;
+        margin-left: 10px;
+    }
+}
