--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,47 @@ a.button-link:active {
     }
 }
 
+/*
+    pageload animations
+*/
+
+.pageload-fade-in {
+    opacity: 0;
+    animation: fade-in 0.6s forwards;
+    animation-delay: 0.2s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.pageload-slide-up {
+    position: relative;
+    top: 20px;
+    opacity: 0;
+    animation: slide-up 0.8s forwards;
+    animation-delay: 0.2s;
+}
+
+@keyframes slide-up {
+    from {
+        opacity: 0;
+        top: 40px;
+    }
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+.pageload-delay-1 {
+    animation-delay: 0.7s;
+}
 
 /*
     base components
