--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,17 @@ html {
     --background-dark-2: rgb(181, 181, 181);
     --background-dark-3: rgb(162, 162, 162);
 
+    --inverse-background-light-4: rgb(113, 118, 128);
+    --inverse-background-light-3: rgb(89, 92, 99);
+    --inverse-background-light-2: rgb(79, 83, 89);
+    --inverse-background-light-1: rgb(63, 67, 71);
+    --inverse-background-color: rgb(46, 48, 51);
+    --inverse-background-dark-1: rgb(32, 34, 36);
+    --inverse-background-dark-2: rgb(19, 20, 20);
+    --inverse-background-dark-3: rgb(11, 12, 13);
+
     --font-color: rgb(0, 0, 0);
+    --inverse-font-color: rgb(240, 240, 240);
     --light-font-color: rgb(229, 229, 229);
     --muted-font: rgb(77, 77, 77);
     --light-muted-font: rgb(200, 200, 200);
@@ -57,7 +67,17 @@ html.dark-theme {
     --background-dark-2: rgb(19, 20, 20);
     --background-dark-3: rgb(11, 12, 13);
 
+    --inverse-background-light-4: rgb(255, 255, 255);
+    --inverse-background-light-3: rgb(255, 255, 255);
+    --inverse-background-light-2: rgb(250, 250, 250);
+    --inverse-background-light-1: rgb(246, 246, 246);
+    --inverse-background-color: rgb(243, 243, 243);
+    --inverse-background-dark-1: rgb(219, 219, 219);
+    --inverse-background-dark-2: rgb(181, 181, 181);
+    --inverse-background-dark-3: rgb(162, 162, 162);
+
     --font-color: rgb(234, 234, 234);
+    --inverse-font-color: rgb(0, 0, 0);
     --light-font-color: rgb(28, 28, 28);
     --muted-font: rgb(188, 188, 188);
     --light-muted-font: rgb(107, 107, 107);
@@ -119,11 +139,7 @@ a {
 }
 
 a.a {
-    border-bottom: 2px dotted var(--primary);
-}
-
-a.a:hover {
-    border-bottom-style: solid;
+    border-bottom: 2px solid var(--primary);
 }
 
 .icon-tabler {
@@ -539,6 +555,10 @@ tbody {
     font-size: 1.2rem;
 }
 
+.mjxgui-demo-button {
+    cursor: pointer;
+}
+
 #mjxgui_editor_window {
     z-index: 5;
 }
@@ -627,7 +647,7 @@ button#change-theme-button {
 
 @media(max-width: 480px) {
     nav#quick-nav {
-        font-size: 0.8rem;
+        font-size: 0.75rem;
     }
 }
 
@@ -635,6 +655,7 @@ button#change-theme-button {
     margin: 0 20px;
     position: relative;
 }
+
 
 @media (max-width: 1300px) {
     .section-link {
@@ -747,10 +768,25 @@ html.dark-theme #profile-photo {
     }
 }
 
+#resume-link {
+    background-color: var(--inverse-background-color);
+    color: var(--inverse-font-color);
+    padding: 2px 6px;
+    border-radius: 4px;
+}
+
 .stat-container {
     padding: 10px 17px 10px 10px;
     border-radius: 50px;
-    background-color: var(--background-dark-1);
+}
+
+.stat-container {
+    background-color: var(--inverse-background-color);
+    color: var(--inverse-font-color);
+}
+
+.stat-container .material-symbols-outlined {
+    color: var(--inverse-font-color);
 }
 
 /*
