--- a/css/styles.css
+++ b/css/styles.css
@@ -104,16 +104,19 @@ html.dark-theme {
 }
 
 ::-webkit-scrollbar {
-    width: 0.85em;
+    width: 18px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--background-color);
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: var(--background-dark-2);
     transition: background-color ease 0.2s;
+    border-radius: 0.5rem;
+    border: 4px solid transparent;
+    background-clip: padding-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -594,6 +597,7 @@ tbody {
 
 button#change-theme-button {
     cursor: pointer;
+    background-color: transparent;
 }
 
 #change-theme-button svg.light-theme-button {
@@ -778,15 +782,6 @@ html.dark-theme #profile-photo {
 .stat-container {
     padding: 10px 17px 10px 10px;
     border-radius: 50px;
-}
-
-.stat-container {
-    background-color: var(--inverse-background-color);
-    color: var(--inverse-font-color);
-}
-
-.stat-container .material-symbols-outlined {
-    color: var(--inverse-font-color);
 }
 
 /*
